Fix T74334: VSE can't import multiple movie files

Add `directory` RNA property to add operators.

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D6986